@startuml

title 01. Core store, users and reference data

hide circle
skinparam linetype ortho

entity Store {
	* id: int
	--
	* name: string(255)
	* slug: string(255)
	* phone: string(255)
	* email: string(255)
	description: string(255)?
	avatar: string(255)?
	* status: ActiveStatusEnum
	* costingMethod: CostingMethodEnum
	* allowBackorders: bool
	* baseCurrency: Currency
	* createdAt: DateTimeImmutable
	* updatedAt: DateTimeImmutable
}

entity User {
	* id: int
	--
	nickname: string(255)?
	* email: string(180)
	* password: string(255)
	avatar: string(255)?
	firstName: string(255)?
	lastName: string(255)?
	dateOfBirth: date?
	* isVerified: bool
	* roles: json
	parent: User?
}

entity Currency {
	* code: string(3)
	--
	* name: string(255)
	* symbol: string(10)
	* decimalPlaces: int
	* status: ActiveStatusEnum
}

entity Unit {
	* id: int
	--
	* code: string(50)
	* name: string(255)
	* precision: int
	* status: ActiveStatusEnum
	* createdAt: DateTimeImmutable
	* updatedAt: DateTimeImmutable
	deletedAt: DateTimeImmutable?
	* store: Store
	createdBy: User?
	updatedBy: User?
}

entity ExchangeRate {
	* id: int
	--
	* rate: decimal(18, 8)
	* validFrom: DateTimeImmutable
	validTo: DateTimeImmutable?
	source: string(255)?
	comment: text?
	* createdAt: DateTimeImmutable
	* fromCurrency: Currency
	* toCurrency: Currency
	store: Store?
}

Store ||--o{ Unit : defines
Currency ||--o{ Store : base currency
Currency ||--o{ ExchangeRate : from/to
Store |o--o{ ExchangeRate : custom rates
User |o--o{ User : parent

note right of Store
  Current project status:
  - Store entity is updated.
  - Store CRUD exists.
  - Currency and Unit entities exist.
  - CurrencyFixtures and UnitFixtures exist.
  - User entity and user/store relation exist.

  Remaining work:
  - Add admin CRUD for Currency if currencies must be editable.
  - Add admin CRUD for Unit if units must be editable per store.
  - Add ExchangeRate entity, repository, fixtures and admin CRUD.
  - Add service for resolving exchange rate:
    document currency -> store base currency.
  - Add validation:
    fromCurrency != toCurrency,
    rate > 0,
    no overlapping active intervals for the same pair/store.
end note

note bottom
  Suggested task order:

  1. Create ExchangeRate entity and migration.
  2. Create ExchangeRateRepository methods:
     findRateForDate(from, to, store, date).
  3. Add admin CRUD/filter for exchange rates.
  4. Add fixtures for common UAH/USD/EUR rates.
  5. Add tests for rate resolution and fallback rules.

  This stage should be completed before Orders, Purchases,
  Payments and ProductPrice, because they need currency conversion.
end note

@enduml
